# bionic_hand

./: README.md
Arduino/MultipleFingers/: MultipleFingers.ino
MATLAB_dev/: ANN_EMG.m  MLP_NNSim1.m  PCA.mat  SLP_learn_test.m  combineData.m  dataAnalyze.m  dsig.m  dtanh.m  evaluatePCA.m  getEMGrawData.m  learning_weights.mat  plotMyoGraph.m  sgn.m  sig.m  test.mat
MATLAB_dev/.svn/: wc.db
MATLAB_dev/MyoMex-master/: .gitignore  LICENSE  MyoMex_Quickstart.m  README.md  README.txt
MATLAB_dev/MyoMex-master/MyoConnectTest/: myo_connect_test.cpp  myo_connect_test_script.m  (+1 more)
MATLAB_dev/csv files/: ep1001.csv  rp1001.csv  rp1002.csv  rp1003.csv  rp1004.csv  rp1005.csv  rp1006.csv
MATLAB_dev/excel files/: re1001.xlsx  rp1001.xlsx
data/: Training_Accuracy_Table.ods  combineData.m  evaluatePCA.m  get_PCA_comp.m  test.m  tf_data_notes
data/filtered_7g/: PCA.mat  emg_array_1.csv  emg_array_2.csv  emg_array_3.csv  emg_array_4.csv  emg_array_5.csv  emg_array_6.csv  emg_array_7.csv  emg_array_8.csv  range.csv  rawDataCombined.mat
data/unfiltered_7g/: PCA.mat  emg_array_1.csv  emg_array_2.csv  emg_array_3.csv  emg_array_4.csv  emg_array_5.csv  emg_array_6.csv  emg_array_7.csv  emg_array_8.csv  range.csv  rawDataCombined.mat
devel/: .catkin  .rosinstall  setup.sh
src/bionic_hand/: CMakeLists.txt
src/bionic_hand/launch/: EMG_data.launch  EMG_eval.launch  bionic_hand_simulations.launch
src/bionic_hand/msg/: FingerPosition.msg
src/bionic_hand/scripts/: EMG_ANN.py  EMG_PCA.py  PCA_comp_calculator.py  emg_data_logger.py  train.py
src/bionic_hand/src/: emg_data.cpp
(+352 files in other folders)
